force-app/main/default/objects/Opportunity/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <description>Date de fin prévue du voyage.</description>
    <type>Date</type>
    <required>True</required>
</CustomField>