force-app/main/default/objects/Opportunity/fields/Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants__c</fullName>
    <label>Number of Participants</label>
    <description>Nombre de participants attendus pour le voyage lié à cette opportunité.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>