force-app/main/default/objects/Opportunity/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <description>Date de début prévue du voyage.</description>
    <type>Date</type>
    <required>True</required>
</CustomField>